# wabby-wabbo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindVma.cmake
config/: vulkan.ini
contrib/VulkanMemoryAllocator/: CMakeLists.txt
include/wabby/: api.hpp  entry.hpp
include/wabby/container/: delayed.hpp  string.hpp  traits.hpp
include/wabby/core/: engine.hpp
include/wabby/memory/: memory.hpp
include/wabby/render/: backend.hpp  backend_raii.hpp
include/wabby/sdl2/: error.hpp  window.hpp
src/container/: CMakeLists.txt  delayed.cpp  dynamic_array.hpp  registry.cpp  registry.hpp  string.cpp  string.hpp
src/core/: CMakeLists.txt  dynamic_library.cpp  dynamic_library.hpp  engine.cpp  engine.hpp
src/dll/: CMakeLists.txt  dll.hpp  dll_posix.cpp  dll_posix.hpp
src/memory/: CMakeLists.txt  memory.cpp
src/render/: CMakeLists.txt  backend.hpp  render.hpp
src/render/vulkan/: defines.hpp  device_allocator.hpp  error.hpp  global_context.hpp  renderer.cpp  vk_allocator.cpp  vk_allocator.hpp  vk_backend.cpp  vk_backend.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_comm_include.hpp  vk_command_buffers.hpp  vk_command_pool.hpp  vk_container_warpper.hpp  vk_defines.hpp  vk_device_allocator.cpp  vk_device_allocator.hpp  vk_entry.cpp  vk_environment.cpp  vk_environment.hpp  vk_fences.hpp  vk_framebuffers.cpp  vk_framebuffers.hpp  vk_globals.cpp  vk_globals.hpp  vk_hardware.cpp  vk_hardware.hpp  vk_registry.cpp  vk_registry.hpp  vk_render_pass.cpp  vk_render_pass.hpp  vk_semaphores.hpp  vk_shader.cpp  vk_shader.hpp  vk_surface.hpp  vk_swapchian.cpp  vk_swapchian.hpp
src/renderer/: CMakeLists.txt  renderer.hpp
src/renderer/vulkan/: environment.hpp  global_context.cpp  global_context.hpp  shader.cpp
src/sdl/: CMakeLists.txt  context.cpp  context.hpp  error.cpp  error.hpp  sdl2.hpp  window.cpp  window.hpp
src/sdl2/: context.cpp  context.hpp  error.cpp  error.hpp  sdl2.hpp  sdl2_error.hpp  window.cpp  window.hpp
src/util/: api.hpp  log.cpp  log.hpp  noncopyable.hpp
src/vulkan/: defines.hpp  device_allocator.cpp  device_allocator.hpp  environment.cpp  environment.hpp  hardware.cpp  hardware.hpp  instance.cpp  instance.hpp  logger.cpp  logger.hpp  miscellaneous.cpp  miscellaneous.hpp  renderer.cpp  renderer.hpp
tests/: CMakeLists.txt  test_delayed.cpp  test_dynamic_library.cpp  test_engine.cpp  test_string.cpp  test_util.cpp
